# simd_mc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WRITEUP_CLAUDE.md
benchmarks/: basic_barrier.cpp  benchmark_crossover.cpp
src/: main.cpp
src/simd_mc/: simd_mc.hpp
src/simd_mc/api/: builder.hpp
src/simd_mc/barriers/: none.hpp  single_barrier.hpp
src/simd_mc/compaction/: strategies.hpp
src/simd_mc/concepts/: all.hpp
src/simd_mc/core/: lane_register.hpp  sim_config.hpp  simd_compat.hpp
src/simd_mc/engine/: monte_carlo_engine.hpp
src/simd_mc/models/: gbm.hpp
src/simd_mc/payoffs/: european.hpp
src/simd_mc/refill/: policies.hpp
src/simd_mc/rng/: philox.hpp
src/tests/: test_barrier.cpp  test_vanilla.cpp
